RESOLVED FIXED34010
An element that doesn't validate and an invalid element shouldn't share style
https://bugs.webkit.org/show_bug.cgi?id=34010
Summary An element that doesn't validate and an invalid element shouldn't share style
Adele Peterson
Reported 2010-01-22 11:18:03 PST
An element that doesn't validate and an invalid element shouldn't share style
Attachments
patch (4.29 KB, text/plain)
2010-01-22 11:44 PST, Adele Peterson
no flags
patch (4.29 KB, patch)
2010-01-22 11:51 PST, Adele Peterson
mitz: review+
Adele Peterson
Comment 1 2010-01-22 11:44:33 PST
Adele Peterson
Comment 2 2010-01-22 11:51:29 PST
mitz
Comment 3 2010-01-22 12:04:03 PST
Comment on attachment 47216 [details] patch > + * html/HTMLFormControlElement.h: validate doesn't need to be virtual. You mean “validity”
Adele Peterson
Comment 4 2010-01-22 12:06:57 PST
Committed revision 53709.
Note You need to log in before you can comment on or make changes to this bug.