An element that doesn't validate and an invalid element shouldn't share style https://bugs.webkit.org/show_bug.cgi?id=34010

Reviewed by Dan Bernstein.

Test: fast/css/pseudo-invalid-novalidate-001.html

* css/CSSStyleSelector.cpp: (WebCore::CSSStyleSelector::canShareStyleWithElement):
  Separate the check for willValidate from the check for isValidFormControlElement.
* html/HTMLFormControlElement.h: The validity method doesn't need to be virtual.



Canonical link: https://commits.webkit.org/45108@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53709 268f45cc-cd09-0410-ab3c-d52691b4dbfc